# AI-CCTV

./: .gitignore  ACCEPTANCE_CHECKLIST.md  AGENTS.md  ARCHITECTURE.md  AUTO_LABELING_PLAN.md  CODEX_EXECUTION_GUIDE.md  CODEX_PROMPTS.md  DATASET_PLAN.md  DECISIONS.md  DEMO_SCENARIO.md  DOCUMENT_INDEX.md  EVAL_PLAN.md  IMPLEMENTATION_PLAN.md  MODEL_EXPERIMENTS.md  MODEL_PLAN.md  PLATFORM_MATRIX.md  PRD.md  PROGRESS.md  READINESS_FIRST_PLAN.md  README.md  RISK_REGISTER.md  SPEC.md  TASKS.json  TECH_SPEC.md  TEST_PLAN.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt
.codex/: state_5.sqlite-wal
.codex/agents/: planner.toml  researcher.toml
configs/: demo_mac.yaml  dev_windows.yaml
data/: README.md
docs/: DATA_COLLECTION_RUNBOOK.md  DEMO_RUNBOOK.md  TRAINING_RUNBOOK.md
models/: README.md
scripts/: _bootstrap.py  auto_label_yolo.py  benchmark_model.py  check_dataset.py  extract_frames.py  preview_camera.py  record_webcam.py  run_dashboard.py  run_video.py  run_webcam.py  split_dataset.py  train_yolo.py  validate_yolo.py
src/ai_cctv/: __init__.py  (+13 more)
tests/: test_abandoned_detection.py  test_config.py  test_dataset_checker.py  test_demo_event_sequence.py  test_detector_tracker_mapping.py  test_event_detector.py  test_event_detector_edge_cases.py  test_event_sequences.py  test_geometry.py  test_label_review_export.py  test_logger.py  test_owner_assignment.py  test_preview_camera.py  test_runtime_cli_errors.py  test_scripts_help.py  test_snapshot_paths.py  test_split_dataset.py  test_theft_suspected.py
tools/: label_review_app.py  select_review_candidates.py
(+10 files in other folders)
