[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "webcam-ai-cctv"
version = "0.1.0"
description = "Webcam AI CCTV system for abandoned object and theft_suspected event detection"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "opencv-python",
  "pandas",
  "pillow",
  "pyyaml",
  "pytest",
  "streamlit",
  "ultralytics",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
